--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PortfolioSite: Mahmud</title>
-
+    <!-- My Css -->
+    <link rel="stylesheet" href="mycss.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -18,6 +19,24 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Navigation -->
+    <style>
+        .navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+  background-color: #2c2536;
+  color: #ffff;
+  padding: 1% 0;
+  font-size: 1.2em;
+  border: 0;
+}
+.navbar-nav li a:hover {
+    color: #8724f8 !important;
+}
+</style>
 
 </head>
 
@@ -30,14 +49,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#">
-                    <h4>B.M.Ashik Mahmud</h4>
-                </a>
+
+                <h4>B.M.Ashik Mahmud</h4>
+
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">WHO</a></li>
-                    <li class="active"><a href="#">WHAT</a></li>
+                    <li><a href="#">WHO</a></li>
+                    <li class=""><a href="#">WHAT</a></li>
                     <li><a href="#">WHERE</a></li>
                 </ul>
             </div>
@@ -45,11 +64,22 @@
         </div>
     </nav>
 
+
     <div class="jumbotron">
         <div class="page-head">
             <h1>Hi,I am B.M.ASHIK MAHMUD</h1>
         </div>
         <p>This is my Portfolio Site.</p>
+        <!-- Add font awesome icons -->
+        <a href="https://www.facebook.com/bm008" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://twitter.com/BmAshikMahmud" class="fa fa-twitter" target="_blank"></a>
+        <a href="https://www.linkedin.com/in/bmmahmud/" class="fa fa-linkedin" target="_blank"></a>
+        <a href="https://github.com/bmmahmud" class="fa fa-github" target="_blank"></a>
+
+
+        <br><a href="/cv/B-M-Ashik-Mahmud-CV.pdf" download>
+            <button type="button" class="btn btn-danger" value="Download!">Download CV</button>
+        </a>
     </div>
 
 
