--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">WHO</a></li>
-                    <li class=""><a href="#">WHAT</a></li>
-                    <li><a href="#">WHERE</a></li>
+                    <li><a href="#"></a></li>
+                    <li class=""><a href="#"></a></li>
+                    <li><a href="#"></a></li>
                 </ul>
             </div>
         </div>
